# rust_extractor

./: .gitignore  Cargo.toml  README.md  app.py  application.py  esv_ranges.py  frame.py  generate_refs.py  requirements.txt  similarity_report.csv  viz.py
.github/workflows/: main_aphorisms.yml
data/: aphorisms.json
src/: main.rs
templates/: heatmap.html
