[package]
name = "rust_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dirs = "4.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rust-bert = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
tch = "0.8"
tokio = { version = "1", features = ["full"] }
